user-select: initial/auto on input works incorrectly
Categories
(Core :: DOM: Selection, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox73 | --- | verified |
People
(Reporter: abc, Assigned: emilio)
References
()
Details
(Keywords: parity-chrome, parity-edge, parity-safari)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:70.0) Gecko/20100101 Firefox/70.0
Steps to reproduce:
- open https://www.bilibili.com/video/av77577858?spm_id_from=333.851.b_7265706f7274466972737431.7 on firefox 70.x
- login your account
- input some text in danmaku sendbar
- select some text via mouse or touchpad
Actual results:
text cannot be selected or selected text incorrectly
Expected results:
selected text correctly as mouse or touchpad selected.
more details:
It works fine on Safari, Chrome, Edge.
It seems that issue was caused by parent user-select value.
reproduce video:
https://www.youtube.com/watch?v=lmrp4lt_9gg
Updated•3 years ago
|
Updated•3 years ago
|
Comment 1•3 years ago
|
||
I could reproduce this issue, I am still trying to find a minimum test script.
Comment 2•3 years ago
|
||
Here is the minimum script: https://software.hixie.ch/utilities/js/live-dom-viewer/?saved=7528
Per spec, https://drafts.csswg.org/css-ui-4/#valdef-user-select-auto
- The computed value of
auto
is determined as follows:- On the ::before and ::after pseudo elements, the computed value is none
- If the element is an editable element, the computed value is
contain
- Otherwise, if the computed value of user-select on the parent of this element is
all
, the computed value isall
- Otherwise, if the computed value of user-select on the parent of this element is
none
, the computed value isnone
- Otherwise, the computed value is
text
The computed value of user-select for <input> and <textarea> should be contain
which allows selections allow selections to extend across this element. We don't support contain
at this moment, I think this is why it doesn't work.
Assignee | ||
Comment 3•3 years ago
|
||
This is not why it doesn't work. Instead of contain
we have independent selection for <input>
and such.
Is this a regression?
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 4•3 years ago
|
||
This is covered by existing tests, via the removal of the rule in forms.css
![]() |
||
Comment 5•3 years ago
|
||
regression-window |
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/964b6feba6a4 user-select: auto on input / textarea should behave as text. r=mats
Comment 7•3 years ago
|
||
bugherder |
Updated•3 years ago
|
Assignee | ||
Comment 8•3 years ago
|
||
Not really a regression. Before that you could repro the bug with -moz-user-select
instead of the -webkit-
variant.
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 9•3 years ago
|
||
Confirmed issue with a Nighly build from 2019-12-09.
Managed to verify the fix wit 73.0b11 on macOS 10.15
Description
•