Bug 1600536 - user-select: auto on input / textarea should behave as text. r=mats

This is covered by existing tests, via the removal of the rule in forms.css

Differential Revision: https://phabricator.services.mozilla.com/D56355